--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/AVespaIsNotAMotorcycle/surveyapp#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
