--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "lint": "eslint ./*.js",
     "dev": "nodemon --exec 'npm run lint && node app'",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +19,8 @@
   },
   "homepage": "https://github.com/AVespaIsNotAMotorcycle/surveyapp#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
