--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./*.js",
-    "dev": "nodemon --exec 'npm run lint && node app'",
+    "dev": "env-cmd -f .env nodemon --exec 'npm run lint && node app'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
