Created "migrate" script, which updates databases

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DATABASE_HOST=localhost
 DATABASE_NAME=surveyapp
 DATABASE_USER=username
 DATABASE_PASSWORD=password
+
+TEST_DATABASE_NAME=surveyapptest
