--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ./*.js",
     "dev": "env-cmd -f .env nodemon --exec 'npm run lint && node app'",
-    "test": "npx jest --watch .",
+    "test": "env-cmd -f .env npx jest --watch .",
     "migrate": "env-cmd -f .env node migrations/migrations.js"
   },
   "repository": {
